objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>IF
(
    ISBLANK(Target_Record_Id__c),
    &quot;&quot;,
    HYPERLINK(&quot;/&quot;&amp;  Target_Record_Id__c , &quot;Record Link&quot;)
)</formula>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Event__c</fullName>
        <label>Script/Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Record_Id__c</fullName>
        <label>Target Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Log_Message__c</columns>
        <columns>Record_Link__c</columns>
        <columns>Script_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CON_Business_Administrator_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>